added custom blog posts, tweaks to other custom elements

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -8,77 +8,58 @@
           "settings": {
             "background": "#FFFFFF",
             "background_gradient": "",
-            "text": "#121212",
-            "button": "#121212",
+            "text": "#1c1b1f",
+            "button": "#bd2058",
             "button_label": "#FFFFFF",
             "secondary_button_label": "#121212",
-            "shadow": "#121212"
+            "shadow": "#1c1b1f"
           }
         },
         "scheme-2": {
           "settings": {
-            "background": "#F3F3F3",
+            "background": "#f4f0f8",
             "background_gradient": "",
-            "text": "#121212",
-            "button": "#121212",
-            "button_label": "#F3F3F3",
+            "text": "#1c1b1f",
+            "button": "#bd2058",
+            "button_label": "#FFFFFF",
             "secondary_button_label": "#121212",
-            "shadow": "#121212"
+            "shadow": "#1c1b1f"
           }
         },
         "scheme-3": {
           "settings": {
-            "background": "#242833",
+            "background": "#bd2058",
             "background_gradient": "",
             "text": "#FFFFFF",
-            "button": "#FFFFFF",
-            "button_label": "#000000",
+            "button": "#f4f0f8",
+            "button_label": "#1c1b1f",
             "secondary_button_label": "#FFFFFF",
-            "shadow": "#121212"
-          }
-        },
-        "scheme-4": {
-          "settings": {
-            "background": "#121212",
-            "background_gradient": "",
-            "text": "#FFFFFF",
-            "button": "#FFFFFF",
-            "button_label": "#121212",
-            "secondary_button_label": "#FFFFFF",
-            "shadow": "#121212"
-          }
-        },
-        "scheme-5": {
-          "settings": {
-            "background": "#334FB4",
-            "background_gradient": "",
-            "text": "#FFFFFF",
-            "button": "#FFFFFF",
-            "button_label": "#334FB4",
-            "secondary_button_label": "#FFFFFF",
-            "shadow": "#121212"
+            "shadow": "#1c1b1f"
           }
         }
       },
-      "type_header_font": "assistant_n4",
+      "background_texture": "",
+      "type_header_font": "montserrat_n6",
       "heading_scale": 100,
-      "type_body_font": "assistant_n4",
+      "type_body_font": "montserrat_n4",
       "body_scale": 100,
+      "type_blog_font": "times_new_roman_n4",
+      "blog_scale": 100,
       "page_width": 1200,
       "spacing_sections": 0,
       "spacing_grid_horizontal": 8,
       "spacing_grid_vertical": 8,
       "buttons_border_thickness": 1,
       "buttons_border_opacity": 100,
-      "buttons_radius": 0,
-      "buttons_shadow_opacity": 0,
+      "buttons_radius": 12,
+      "buttons_shadow_opacity": 20,
       "buttons_shadow_horizontal_offset": 0,
       "buttons_shadow_vertical_offset": 4,
       "buttons_shadow_blur": 5,
       "variant_pills_border_thickness": 1,
       "variant_pills_border_opacity": 55,
       "variant_pills_radius": 40,
-      "variant_pills_shadow_opacity": 0,
+      "variant_pills_shadow_opacity": 20,
       "variant_pills_shadow_horizontal_offset": 0,
       "variant_pills_shadow_vertical_offset": 4,
       "variant_pills_shadow_blur": 5,
@@ -96,7 +77,7 @@
       "card_border_thickness": 0,
       "card_border_opacity": 10,
       "card_corner_radius": 0,
-      "card_shadow_opacity": 0,
+      "card_shadow_opacity": 20,
       "card_shadow_horizontal_offset": 0,
       "card_shadow_vertical_offset": 4,
       "card_shadow_blur": 5,
@@ -107,7 +88,7 @@
       "collection_card_border_thickness": 0,
       "collection_card_border_opacity": 10,
       "collection_card_corner_radius": 0,
-      "collection_card_shadow_opacity": 0,
+      "collection_card_shadow_opacity": 20,
       "collection_card_shadow_horizontal_offset": 0,
       "collection_card_shadow_vertical_offset": 4,
       "collection_card_shadow_blur": 5,
@@ -122,6 +103,10 @@
       "blog_card_shadow_horizontal_offset": 0,
       "blog_card_shadow_vertical_offset": 4,
       "blog_card_shadow_blur": 5,
+      "storyteller_blog_card_shadow_opacity": 20,
+      "storyteller_blog_card_shadow_horizontal_offset": 0,
+      "storyteller_blog_card_shadow_vertical_offset": 4,
+      "storyteller_blog_card_shadow_blur": 5,
       "text_boxes_border_thickness": 0,
       "text_boxes_border_opacity": 10,
       "text_boxes_radius": 0,
@@ -139,19 +124,19 @@
       "popup_border_thickness": 1,
       "popup_border_opacity": 10,
       "popup_corner_radius": 0,
-      "popup_shadow_opacity": 5,
+      "popup_shadow_opacity": 20,
       "popup_shadow_horizontal_offset": 0,
       "popup_shadow_vertical_offset": 4,
       "popup_shadow_blur": 5,
       "drawer_border_thickness": 1,
       "drawer_border_opacity": 10,
-      "drawer_shadow_opacity": 0,
+      "drawer_shadow_opacity": 20,
       "drawer_shadow_horizontal_offset": 0,
       "drawer_shadow_vertical_offset": 4,
       "drawer_shadow_blur": 5,
       "badge_position": "bottom left",
       "badge_corner_radius": 40,
-      "sale_badge_color_scheme": "scheme-5",
+      "sale_badge_color_scheme": "scheme-3",
       "sold_out_badge_color_scheme": "scheme-3",
       "social_twitter_link": "",
       "social_facebook_link": "",
